2015-12-04  Hubert Degaudenzi  <Hubert.Degaudenzi@unige.ch>

	* setup.py: release of version 1.14.1
	- fix for the reuse of EUCLID_BASE in ELogin
	- add a generic lx type in the BINARY_TAG. This corresponds
	  to an unkown linux box.

2015-11-27  Hubert Degaudenzi  <Hubert.Degaudenzi@unige.ch>

	* setup.py: release of version 1.14

2015-11-27  Hubert Degaudenzi  <Hubert.Degaudenzi@unige.ch>

	* data/profile/euclid.csh: fix the cleanup of the banner
	* data/profile/euclid.sh: 
	- fix the cleanup of the banner
	- fix the shell setup for bash
	
2015-11-26  Hubert Degaudenzi  <Hubert.Degaudenzi@unige.ch>

	* runtests.py: New file. This file can be generated with
	the command:
	  py.test --genscript=runtests.py
	* tests/LocationTest.py: New file.
	* .gitignore: ignore __pycache__ entries
	* MANIFEST.in: new runtests.py file.
	* setup.py: Add the new test command that allows to run 
	automatically py.test on all the tests of the tests subdirectory.
	
2015-10-13  Hubert Degaudenzi  <Hubert.Degaudenzi@unige.ch>

	* setup.py: release of version 1.13.1
	* python/Euclid/Run/Lookup.py: Bugfix. The E-Run command was not 
	checking the existence of the directory of a project before trying 
	to list its version subdirectories.

2015-10-07  Hubert Degaudenzi  <Hubert.Degaudenzi@unige.ch>

	* setup.py: release of version 1.13
	- update to the cmake library of Elements 3.8 
    - introduction of the draft generation of the python
      SWIG bindings
	 
2015-08-18  Hubert Degaudenzi  <Hubert.Degaudenzi@unige.ch>

	* setup.py: release of version 1.12.2 
	- update to the cmake library of the Elements 3.7.2 version
    - fix a bug in the toolchain crawling of projects
    
2015-08-05  Hubert Degaudenzi  <Hubert.Degaudenzi@unige.ch>

	* setup.py: release of version 1.12.1
	- fix of the conversion of the CMAKE_PROJECT_PATH environment
	  variable into a cmake list

2015-08-03  Hubert Degaudenzi  <Hubert.Degaudenzi@unige.ch>

	* setup.py: release of version 1.12 