@@ -66,6 +66,11 @@ fi
 
 
 %changelog
+* Mon Jan 25 2016 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 1.15-1
+- update to the latest cmake library of Elements (3.10)
+- add ERun_autocompletion.sh script (Tristan Grégoire). Please note 
+  that this script has to be called by hand from the .bashrc for the moment.
+
 * Fri Dec 4 2015 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 1.14.1-1
 - Emergency fir for the usage of EUCLID_BASE env variable in ELogin
 - add a generic lx type in the BINARY_TAG. This corresponds
